<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090707"
    tools:context=".ModuleSem2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="275dp">

        <TextView
            android:id="@+id/m2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1ED760"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="8sp"
            android:padding="10sp"
            android:text="Semester 2"
            android:textColor="#F8F7F7"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"

            />

        <Button
            android:id="@+id/sem2mod1"
            style="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:onClick="m2s1"
            android:text="@string/Sem2module1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/sem2mod2"
            style="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:onClick="m2s2"
            android:text="@string/Sem2module2"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/sem2mod3"
            style="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:onClick="m2s3"
            android:text="@string/Sem2module3"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/sem2mod4"
            style="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:onClick="m2s4"
            android:text="@string/Sem2module4"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/sem2mod5"
            style="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:onClick="m2s5"
            android:text="@string/Sem2module5"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/sem2mod6"
            style="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:onClick="m2s6"
            android:text="@string/Sem2module6"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="normal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>